Wire up /movie POST route
