# src/dtos/movies.dto.ts
@@ -4,8 +4,10 @@ export class CreateMovieDto {
   // @IsEmail()
   // public email: string;
 
-  // @IsString()
-  // public password: string;
+  @IsString()
+  public title: string;
+  public description: string;
+  public rating: string;
 }
 
 // handy https://www.npmjs.com/package/class-validator
