# src/routes/movies.route.ts
@@ -1,25 +1,25 @@
 import { Router } from 'express';
-import UsersController from '../controllers/users.controller';
-import { CreateUserDto } from '../dtos/users.dto'; // TODO
+import MoviesController from '../controllers/movies.controller';
+import { CreateMovieDto } from '../dtos/movies.dto'; // TODO
 import Route from '../interfaces/routes.interface';
 import validationMiddleware from '../middlewares/validation.middleware';
 
-class UsersRoute implements Route {
+class MoviesRoute implements Route {
   public path = '/movies';
   public router = Router();
-  public usersController = new UsersController(); // TODO
+  public movieController = new MoviesController(); // TODO
 
   constructor() {
     this.initializeRoutes();
   }
 
   private initializeRoutes() {
-    this.router.get(`${this.path}`, this.usersController.getUsers);
-    this.router.get(`${this.path}/:id`, this.usersController.getUserById);
-    this.router.post(`${this.path}`, validationMiddleware(CreateUserDto, 'body'), this.usersController.createUser);
-    this.router.put(`${this.path}/:id`, validationMiddleware(CreateUserDto, 'body', true), this.usersController.updateUser);
-    this.router.delete(`${this.path}/:id`, this.usersController.deleteUser);
+    // this.router.get(`${this.path}`, this.movieController.getUsers);
+    // this.router.get(`${this.path}/:id`, this.movieController.getUserById);
+    this.router.post(`${this.path}`, validationMiddleware(CreateMovieDto, 'body'), this.movieController.createMovie);
+    // this.router.put(`${this.path}/:id`, validationMiddleware(CreateUserDto, 'body', true), this.movieController.updateUser);
+    // this.router.delete(`${this.path}/:id`, this.movieController.deleteUser);
   }
 }
 
-export default UsersRoute;
+export default MoviesRoute;
