# swagger.yaml
@@ -1,13 +1,15 @@
 tags:
-- name: users
-  description: users API
+  - name: users
+    description: users API
+  - name: movies
+    description: movies API
 
 paths:
-# [GET] users
+  # [GET] users
   /users:
     get:
       tags:
-      - users
+        - users
       summary: Find All Users
       responses:
         200:
@@ -15,18 +17,51 @@ paths:
         500:
           description: 'Server Error'
 
-# [POST] users
+    # [POST] users
     post:
       tags:
-      - users
+        - users
       summary: Add User
       parameters:
-      - name: body
-        in: body
-        description: user Data
-        required: true
-        schema:
-          $ref: '#/definitions/users'
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: '#/definitions/users'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+  # [GET] movies
+  /movies:
+    get:
+      tags:
+        - movies
+      summary: Find All Movies
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+    # [POST] movies
+    post:
+      tags:
+        - movies
+      summary: Add Movie
+      parameters:
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: '#/definitions/movies'
       responses:
         201:
           description: 'Created'
@@ -37,17 +72,17 @@ paths:
         500:
           description: 'Server Error'
 
-# [GET] users/id
+  # [GET] users/id
   /users/{id}:
     get:
       tags:
-      - users
+        - users
       summary: Find User By Id
       parameters:
-      - name: id
-        in: path
-        description: User Id
-        required: true
+        - name: id
+          in: path
+          description: User Id
+          required: true
       responses:
         200:
           description: 'OK'
@@ -56,22 +91,22 @@ paths:
         500:
           description: 'Server Error'
 
-# [PUT] users/id
+    # [PUT] users/id
     put:
       tags:
-      - users
+        - users
       summary: Update User By Id
       parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
-      - name: body
-        in: body
-        description: user Data
-        required: true
-        schema:
-          $ref: '#/definitions/users'
+        - name: id
+          in: path
+          description: user Id
+          required: true
+        - name: body
+          in: body
+          description: user Data
+          required: true
+          schema:
+            $ref: '#/definitions/users'
       responses:
         200:
           description: 'OK'
@@ -82,16 +117,79 @@ paths:
         500:
           description: 'Server Error'
 
-# [DELETE] users/id
+          # [DELETE] users/id
     delete:
       tags:
-      - users
+        - users
       summary: Delete User By Id
       parameters:
-      - name: id
-        in: path
-        description: user Id
-        required: true
+        - name: id
+          in: path
+          description: user Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  # [GET] movie/id
+  /movie/{id}:
+    get:
+      tags:
+        - movie
+      summary: Find Movie By Id
+      parameters:
+        - name: id
+          in: path
+          description: Movie Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [PUT] movies/id
+    put:
+      tags:
+        - movie
+      summary: Update Movie By Id
+      parameters:
+        - name: id
+          in: path
+          description: movie Id
+          required: true
+        - name: body
+          in: body
+          description: movie Data
+          required: true
+          schema:
+            $ref: '#/definitions/movies'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [DELETE] movies/id
+    delete:
+      tags:
+        - movie
+      summary: Delete Movie By Id
+      parameters:
+        - name: id
+          in: path
+          description: movie Id
+          required: true
       responses:
         200:
           description: 'OK'
@@ -105,8 +203,8 @@ definitions:
   users:
     type: object
     required:
-        - email
-        - password
+      - email
+      - password
     properties:
       id:
         description: user Id
@@ -116,7 +214,24 @@ definitions:
       password:
         type: string
         description: user Password
+  movies:
+    type: object
+    required:
+      - email
+      - password
+    properties:
+      id:
+        description: movie Id
+      title:
+        type: string
+        description: movie Title
+      description:
+        type: string
+        description: movie Description
+      rating:
+        type: string
+        description: movie Rating
 
 schemes:
- - https
- - http
+  - https
+  - http
